# DataEngineering

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Containerfile  DEPLOY.md  GUIDES.md  Glossaryoftools.md  LICENSE.md  NOTEBOOKS.md  Pipfile  README.md  SETUP.md  SPEC.md  STYLEGUIDE.md  WindowsSetup.md  bucketname  conftest.py  docker-bake.hcl  main.tf  part-00000-46ff4e2a-a748-4707-944d-7a92477bb36b-c000.snappy.parquet  pyproject.toml  requirements.txt  variables.tf
.circleci/: build-check-dataset-equality-config.yml  build-container-config.yml  build-dataset-rebuild-config.yml  check-dataset-equality-config.yml  config.yml  continue-config.yml  docker-ecr-config.yml
.github/: pull request_template.md  pull_request_template.md
environment/: constants.py  environment.py
jobs/: archive_filled_posts_estimates.py  bleh.py  bulk_download_cqc_locations.py  bulk_download_cqc_locations_new.py  bulk_download_cqc_locations_old.py  bulk_download_cqc_providers.py  bulk_download_cqc_providers_new.py  clean_ascwds_worker_data.py  clean_ascwds_workplace_data.py  clean_capacity_tracker_care_home_data.py  clean_capacity_tracker_non_res_data.py  clean_cqc_location_data.py  clean_cqc_pir_data.py  clean_cqc_provider_data.py  clean_ind_cqc_filled_posts.py  clean_ons_data.py  collect_dq_metrics_on_workplaces_job.py  cqc_coverage_based_on_login_purge.py  create_care_home_features_ind_cqc_filled_posts.py  create_cqc_coverage_csv_file.py  create_job_estimates_diagnostics.py  csv_to_parquet.py  csv_to_parquet_pir.py  denormalise_ascwds_dataset.py  (+94 more)
(+1718 files in other folders)
